[tool.poetry]
name = "langchain_basics"
version = "0.1.0"
description = ""
authors = ["SimTet <simon.tetzner@googlemail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.3.3"
langserve = "^0.3.0"
langchain-cli = "^0.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
