[project]
name = "langchain-basics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.9",
    "langchain-openai>=0.2.10",
    "httpx>=0.27.2",
    "langserve>=0.3.0",
    "fastapi>=0.115.5",
    "langchain-cli>=0.0.33",
    "pydantic-settings>=2.6.1",
    "langchain-chroma>=0.1.4",
    "langchain-community>=0.3.8",
    "bs4>=0.0.2",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "streamlit>=1.40.2",
]
